[package]
name = "jiguang-certification"
version = "0.1.1"
authors = ["EchoLi <Echo_AI@foxmail.com>"]
edition = "2018"
description = "极光认证登录SDK, JiGuang Certification SDK"
license = "MIT"
readme = "README.md"
repository = "https://github.com/EchoRust/JiGuangCertification"
keywords = ["jiguang", "certification", "JVerification"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
rsa = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }